Основное задание - Дополнительное задание 4 + рефакторинг кода